Resolves: fdo#78838 past-the-end iterator

Inserting data in pColumnData invalidated miAutoPosColumn
See https://bugs.freedesktop.org/show_bug.cgi?id=78838#c6

Change-Id: Iece423cd8d14f5ae7bf382583c0369895a00f168