sc/source/ui/app/inputhdl.cxx
@@ -1418,7 +1418,10 @@ void ScInputHandler::GetColData()
         pDoc->GetDataEntries(
             aCursorPos.Col(), aCursorPos.Row(), aCursorPos.Tab(), true, aEntries, true);
         if (!aEntries.empty())
+        {
             pColumnData->insert(aEntries.begin(), aEntries.end());
+            miAutoPosColumn = pColumnData->end();
+        }
     }
 }
 
